--- a/.github/workflows/CICD_TEST.yml
+++ b/.github/workflows/CICD_TEST.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Export ARM templates
         id: export
         uses: Azure/data-factory-export-action@v1.2.0
-#         with:
-#           path: ADFIntegration
+         with:
+           path: ADFIntegration
 #           id: /subscriptions/66c4f000-9f32-4f19-8a94-8da1e61cf95f/resourceGroups/cicd/providers/Microsoft.DataFactory/factories/msazureadf-dev
 
       - name: Upload ARM templates artifact
